--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,12 @@ dependencies {
 
     // layout
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.1.0'
+
+    // email
+    implementation 'org.springframework.boot:spring-boot-starter-mail:2.7.3'
+
+    // RandomStringUtils
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
 }
 
 tasks.named('test') {
