--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -12,7 +12,7 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/mealKit_dev?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
     username: root
-    password: 1111
+    password: rnjswotns12
   jpa:
     hibernate:
       ddl-auto: create
