--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,6 +4,7 @@ spring:
   thymeleaf:
     cache: false
     prefix: file:src/main/resources/templates/
+    suffix: .html
   devtools:
     livereload:
       enabled: true
